--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DrinkfinderContext":
+    "host=localhost;port=5432;database=3610Test;username=3610Test;password=12345;pooling=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
