Added Security Modules

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -3,6 +3,12 @@
     "DrinkfinderContext":
     "host=localhost;port=5432;database=3610Test;username=3610Test;password=12345;pooling=true"
   },
+  "JWTConfiguration": {
+    "Issuer": "Issuer",
+    "Audience": "audience",
+    "Key": "key",
+    "TokenExpirationDays": 7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
