--- a/tests/Drinkfinder.Api.Tests.csproj
+++ b/tests/Drinkfinder.Api.Tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\api\Drinkfinder.Api.csproj" />
+    <ProjectReference Include="..\api\DrinkFinder.Api.csproj" />
   </ItemGroup>
 
 </Project>
